--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,10 +1,11 @@
-<%- include('./includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/product.css" />
+    <script src="/js/deleteProduct.js" defer></script>
   </head>
 
   <body>
-    <%- include('./includes/navigation.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
 
     <main>
       <% if(hasProducts) { %>
@@ -16,19 +17,19 @@
           </header>
           <div class="card__image">
             <img
-              src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png"
-              alt="A Book"
+              src=<%= product.imageUrl %>
+              alt=<%= product.title %>
             />
           </div>
           <div class="card__content">
-            <h2 class="product__price">$19.99</h2>
+            <h2 class="product__price">$<%= product.price %></h2>
             <p class="product__description">
-              A very interesting book about so many even more interesting
-              things!
+              <%= product.description %>
             </p>
           </div>
           <div class="card__actions">
-            <button class="btn">Add to Cart</button>
+            <button class="btn editProduct"><a href="/admin/edit-product/<%= product._id %>">Edit</a></button>
+            <button class="btn deleteProduct" data-doc="<%= product._id %>">Delete</button>
           </div>
         </article>
         <% } %> <% } else { %>
@@ -36,4 +37,4 @@
         <% } %>
       </div>
     </main>
-    <%- include('./includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
