--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,8 +1,35 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/main.css" />
-    <link rel="stylesheet" href="/css/product.css" />
-  </head>
+<link rel="stylesheet" href="/css/main.css" />
+<link rel="stylesheet" href="/css/product.css" />
+    <link rel="stylesheet" href="/css/cart.css">
+    <script src="/js/deleteCartProduct.js" defer></script>
+    </head>
 
-  <body>
-    <%- include('../includes/navigation.ejs') %>
-    <%- include('../includes/end.ejs') %>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (products.length > 0) { %>
+                <ul class="cart__item-list">
+                    <% products.forEach(p => { %>
+                        <li class="cart__item">
+                            <h1><%= p.productId.title %></h1>
+                            <h2>Quantity: <%= p.quantity %></h2>
+                            <form>
+                                <input type="hidden" value="<%= p._id %>" name="productId">
+                                <button class="btn danger deleteProductBtn" type="submit" data-doc="<%= p._id %>">Delete</button>
+                            </form>
+                        </li>
+                    <% }) %>
+                </ul>
+                <hr>
+                <div class="centered">
+                    <form action="/create-order" method="POST">
+                        <button type="submit" class="btn">Order Now!</button>
+                    </form>
+                </div>
+                
+            <% } else { %>
+                <h1>No Products in Cart!</h1>
+            <% } %>
+        </main>
+        <%- include('../includes/end.ejs') %>
