adding orders, orders model, authentication login, cookies

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,6 +3,7 @@
 <link rel="stylesheet" href="/css/product.css" />
     <link rel="stylesheet" href="/css/cart.css">
     <script src="/js/deleteCartProduct.js" defer></script>
+    <script src="/js/addOrder.js" defer></script>
     </head>
 
     <body>
@@ -23,8 +24,8 @@
                 </ul>
                 <hr>
                 <div class="centered">
-                    <form action="/create-order" method="POST">
-                        <button type="submit" class="btn">Order Now!</button>
+                    <form >
+                        <button type="submit" class="btn addOrderBtn">Order Now!</button>
                     </form>
                 </div>
                 
