--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -1,6 +1,7 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/product.css" />
+    <script src="/js/addToCart.js" defer></script>
   </head>
 
   <body>
@@ -27,7 +28,7 @@
             </p>
           </div>
           <div class="card__actions">
-            <button class="btn">Add to Cart</button>
+            <button class="btn addToCartBtn" data-doc="<%=product._id %>">Add to Cart</button>
           </div>
         </article>
         <% } %> <% } else { %>
