--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -36,9 +36,7 @@
     </ul>
     <ul class="main-header__item-list">
       <li class="main-header__item">
-        <a
-          class="<%= path === '/admin/add-product' ? 'active' : '' %>"
-          href="/login"
+        <a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
           >Login</a
         >
       </li>
