--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -29,8 +29,9 @@
           </div>
           <div class="card__actions">
             <a class="btn" href="/products/<%= product._id %>">Details</a>
+            <% if(isAuthenticated) {%>
             <button class="btn addToCartBtn" data-doc="<%=product._id %>">Add to Cart</button>
-           
+           <% } %>
           </div>
         </article>
         <% } %> <% } else { %>
