--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -11,6 +11,7 @@
           >Products</a
         >
       </li>
+      <% if(isAuthenticated){ %>
       <li class="main-header__item">
         <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
       </li>
@@ -19,7 +20,7 @@
           >Orders</a
         >
       </li>
-      <!-- <li class="main-header__item">
+      <li class="main-header__item">
         <a
           class="<%= path === '/admin/add-product' ? 'active' : '' %>"
           href="/admin/add-product"
@@ -32,14 +33,23 @@
           href="/admin/products"
           >Admin Products
         </a>
-      </li> -->
+      </li>
+      <% } %>
     </ul>
     <ul class="main-header__item-list">
+      <% if(!isAuthenticated) { %>
       <li class="main-header__item">
         <a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
           >Login</a
         >
       </li>
+      <% }else{ %>
+      <li class="main-header__item">
+        <a class="<%= path === '/logout' ? 'active' : '' %> logoutBtn"
+          >Logout</a
+        >
+      </li>
+      <% } %>
     </ul>
   </nav>
 </header>
