--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -13,8 +13,10 @@
           </div>
           <h2><%= product.price %></h2>
           <p><%= product.description %></p>
+          <% if(isAuthenticated) {  %>
           <div>
             <button class="btn addToCartBtn" data-doc="<%=product._id %>">Add to cart</button>
           </div>
+          <% } %>
       </main>
     <%- include('../includes/end.ejs') %>
