--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,6 +17,7 @@
         <div class="form-control">
           <label for="password">Password</label>
           <input type="password" name="password" id="password" />
+          <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
         </div>
         <button class="btn loginBtn" type="submit">Login</button>
       </form>
