--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -28,6 +28,7 @@
             </p>
           </div>
           <div class="card__actions">
+            <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
             <a class="btn" href="/products/<%= product._id %>">Details</a>
             <% if(isAuthenticated) {%>
              <button class="btn addToCartBtn" data-doc="<%=product._id %>">Add to Cart</button>
