--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
 * {
   box-sizing: border-box;
@@ -7,7 +7,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 main {
@@ -29,6 +29,16 @@ form {
 
 .image img {
   height: 100%;
+}
+
+.editProductLink:link,
+.editProductLink:visited {
+  display: block;
+  width: 100%;
+  text-decoration: none;
+  height: 100%;
+  color: #00695c;
+  text-align: center;
 }
 
 .main-header {
