--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -12,20 +12,21 @@
       <form class="product-form">
         <div class="form-control">
           <label for="title">Title</label>
-          <input type="text" name="title" id="title" />
+          <input type="text" name="title" id="title"  value="<%= product.title %>"/>
         </div>
         <div class="form-control">
           <label for="imageUrl">Image URL</label>
-          <input type="text" name="imageUrl" id="imageUrl" />
+          <input type="text" name="imageUrl" id="imageUrl" value="<%= product.imageUrl %>"/>
         </div>
         <div class="form-control">
           <label for="price">Price</label>
-          <input type="number" name="price" id="price" step="0.01"/>
+          <input type="number" name="price" id="price" step="0.01" value="<%= product.price %>"/>
         </div>
         <div class="form-control">
           <label for="description">Description</label>
-          <textarea  name="description" id="description" rows="5"></textarea>
+          <textarea  name="description" id="description" rows="5" ><%= product.description %></textarea>
         </div>
+        <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
         <button class="btn editProduct" type="submit">Edit Product</button>
       </form>
     </main>
