--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -17,6 +17,7 @@
                             <h2>Quantity: <%= p.quantity %></h2>
                             <form>
                                 <input type="hidden" value="<%= p._id %>" name="productId">
+                                <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
                                 <button class="btn danger deleteProductBtn" type="submit" data-doc="<%= p._id %>">Delete</button>
                             </form>
                         </li>
@@ -25,6 +26,7 @@
                 <hr>
                 <div class="centered">
                     <form >
+                        <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
                         <button type="submit" class="btn addOrderBtn">Order Now!</button>
                     </form>
                 </div>
