--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -9,6 +9,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
+      <p class="userMessage userMessage--error hide-field"></p>
       <form class="login-form">
         <div class="form-control">
           <label for="email">E-mail</label>
