--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,6 +9,7 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
+        <p class="userMessage userMessage--error hide-field"></p>
         <form class="login-form signupForm">
             <div class="form-control">
                 <label for="email">E-Mail</label>
