validating inputs for ui for signup, sending emails for newly registered user using nodemailer package

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,14 @@ form {
   display: inline;
 }
 
+a:link,
+a:visited {
+  text-decoration: none;
+}
+a:hover,
+a:active {
+  text-decoration: underline;
+}
 .centered {
   text-align: center;
 }
@@ -252,6 +260,10 @@ form {
 
 .hide-field {
   display: none;
+}
+
+.userMessage--registered {
+  background-color: rgb(53, 253, 53);
 }
 
 @media (min-width: 768px) {
