--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -11,19 +11,19 @@
       <form class="product-form">
         <div class="form-control">
           <label for="title">Title</label>
-          <input type="text" name="title" id="title" />
+          <input type="text" name="title" id="title" required />
         </div>
         <div class="form-control">
           <label for="imageUrl">Image URL</label>
-          <input type="text" name="imageUrl" id="imageUrl" />
+          <input type="text" name="imageUrl" id="imageUrl"  required/>
         </div>
         <div class="form-control">
           <label for="price">Price</label>
-          <input type="number" name="price" id="price" step="0.01"/>
+          <input type="number" name="price" id="price" step="0.01" required/>
         </div>
         <div class="form-control">
           <label for="description">Description</label>
-          <textarea  name="description" id="description" rows="5"></textarea>
+          <textarea  name="description" id="description" rows="5" required></textarea>
         </div>
         <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
         <button class="btn" type="submit">Add Product</button>
