--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,6 +10,7 @@
 
     <main>
         <p class="userMessage userMessage--error hide-field"></p>
+        <div class="userMessage userMessage--registered hide-field"></div>
         <form class="login-form signupForm">
             <div class="form-control">
                 <label for="email">E-Mail</label>
