implementing reset password

--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/forms.css" />
     <link rel="stylesheet" href="/css/auth.css" />
-    <script src="/js/login.js" defer></script>
+    <script src="/js/resetPassword.js" defer></script>
   </head>
   
   <body>
@@ -10,21 +10,14 @@
 
     <main>
       <p class="userMessage userMessage--error hide-field"></p>
+      <p class="userMessage userMessage--reset hide-field"></p>
       <form class="login-form">
         <div class="form-control">
           <label for="email">E-mail</label>
           <input type="email" name="email" id="email" />
         </div>
-        <div class="form-control">
-          <label for="password">Password</label>
-          <input type="password" name="password" id="password" />
-          <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
-        </div>
-        <button class="btn loginBtn" type="submit">Login</button>
+        <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
+        <button class="btn resetPasswordBtn" type="submit">Reset Password</button>
       </form>
-      <div class="centered" style="margin-top: 1rem;">
-        <a href="/reset">Forgot Password? Reset here</a>
-
-      </div>
     </main>
     <%- include('../includes/end.ejs') %>
