using express-validator to validate signup and login forms

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -10,7 +10,7 @@
 
     <main>
       <p class="userMessage userMessage--error hide-field"></p>
-      <form class="login-form">
+      <form class="login-form" novalidate>
         <div class="form-control">
           <label for="email">E-mail</label>
           <input type="email" name="email" id="email" />
