adding css classes for invalid inputs and sanitazing the data with express-validator built in functions

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -11,7 +11,7 @@
     <main>
         <p class="userMessage userMessage--error hide-field"></p>
         <div class="userMessage userMessage--registered hide-field"></div>
-        <form class="login-form signupForm">
+        <form class="login-form signupForm" novalidate>
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email" class="signupEmail">
