--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -2,6 +2,11 @@
   margin: 1rem 0;
 }
 
+.form-control input.invalid {
+  border: 2px solid crimson;
+  background-color: rgb(246, 123, 148);
+}
+
 .form-control label,
 .form-control input,
 .form-control textarea {
