--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -8,6 +8,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
+      <p class="userMessage userMessage--error hide-field"></p>
       <form class="product-form">
         <div class="form-control">
           <label for="title">Title</label>
@@ -29,5 +30,5 @@
         <button class="btn" type="submit">Add Product</button>
       </form>
     </main>
-    <script src="/js/index.js" ></script>
+    <script src="/js/addProduct.js" ></script>
     <%- include('../includes/end.ejs') %>
