--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -9,6 +9,7 @@
    <%- include('../includes/navigation.ejs') %>
 
     <main>
+      <p class="userMessage userMessage--error hide-field"></p>
       <form class="product-form">
         <div class="form-control">
           <label for="title">Title</label>
