--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -9,14 +9,18 @@
 
     <main>
       <p class="userMessage userMessage--error hide-field"></p>
-      <form class="product-form">
+      <form class="product-form" enctype="multipart/form-data">
         <div class="form-control">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" required />
         </div>
-        <div class="form-control">
+        <!-- <div class="form-control">
           <label for="imageUrl">Image URL</label>
           <input type="text" name="imageUrl" id="imageUrl"  required/>
+        </div> -->
+        <div class="form-control">
+          <label for="image">Image</label>
+          <input type="file" name="image" id="image"/>
         </div>
         <div class="form-control">
           <label for="price">Price</label>
