--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -10,14 +10,18 @@
 
     <main>
       <p class="userMessage userMessage--error hide-field"></p>
-      <form class="product-form">
+      <form class="product-form" enctype="multipart/form-data">
         <div class="form-control">
           <label for="title">Title</label>
           <input type="text" name="title" id="title"  value="<%= product.title %>"/>
         </div>
-        <div class="form-control">
+        <!-- <div class="form-control">
           <label for="imageUrl">Image URL</label>
           <input type="text" name="imageUrl" id="imageUrl" value="<%= product.imageUrl %>"/>
+        </div> -->
+        <div class="form-control">
+          <label for="image">Image</label>
+          <input type="file" name="image" id="image" value="<%= product.imageUrl %>"/>
         </div>
         <div class="form-control">
           <label for="price">Price</label>
