--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -12,7 +12,7 @@
                 <ul class="orders">
                     <% orders.forEach((order,idx) => { %>
                         <li class="orders__item">
-                            <h1>Order - # <%= idx+1 %></h1>
+                            <h1>Order - # <%= idx+1 %> - <a href="/orders/<%= order._id %>">Download Invoice </a></h1>
                             <ul class="orders__products">
                                 <% order.products.forEach(p => { %>
                                     <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
