--- a/public/css/main.css
+++ b/public/css/main.css
@@ -266,6 +266,30 @@ a:active {
   background-color: rgb(53, 253, 53);
 }
 
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: #00695c;
+  padding: 0.5rem;
+  border: 1px solid #00695c;
+  margin: 0 1 rem;
+}
+
+.pagination a:hover,
+.pagination a:active {
+  background-color: #00695c;
+  color: #fff;
+}
+
+.pagination a.active {
+  background-color: #00695c;
+  color: #fff;
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
