Integrating Stripe for payments

--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -25,10 +25,11 @@
                 </ul>
                 <hr>
                 <div class="centered">
-                    <form >
+                    <!-- <form >
                         <input type="hidden" value="<%= csurfToken %>" class="csurfToken" />
                         <button type="submit" class="btn addOrderBtn">Order Now!</button>
-                    </form>
+                    </form> -->
+                    <a href="/checkout" class="btn">Order Now!</a>
                 </div>
                 
             <% } else { %>
